--- a/examples/test_stream.ipynb
+++ b/examples/test_stream.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "a5b973e1",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "03240dfd",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "c5e70175",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        " 'https://open.bigmodel.cn/api/paas/v4/')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "6d716f35",
    "metadata": {},
    "outputs": [],
@@ -88,18 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4e0ab750",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name two cities in South AmericaSure! Two cities in South America are São Paulo (Brazil) and Lima (Peru).Sure! Two cities in South America are São Paulo (Brazil) and Lima (Peru)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "streaming_assistant = AssistantAgent(\n",
     "    name=\"assistant\",\n",
@@ -108,6 +100,16 @@
     "    model_client_stream=True,  # Enable streaming tokens.\n",
     " )\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82300d47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#流式输出streaming_assistant的内容\n"
    ]
   },
   {
@@ -181,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
